--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon dist/app.js",
-    "build":"tsc",
+    "build": "tsc",
     "watch": "tsc -w"
   },
   "author": "Aniket",
@@ -15,11 +15,13 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
+    "@types/validator": "^13.11.9",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5"
   }
