--- a/backend/package.json
+++ b/backend/package.json
@@ -13,16 +13,20 @@
   "author": "Aniket",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
+    "uuid": "^9.0.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.11",
+    "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.9",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5"
