--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "chart.js": "^4.4.2",
     "firebase": "^10.11.0",
     "react": "^18.2.0",
@@ -17,11 +18,13 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-table": "^7.8.0",
     "sass": "^1.75.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-table": "^7.7.20",
